added passcode screen

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 </style>
 
 <script>
-  const correctPass = "1905"; // 🔑 change this to your passcode
+  const correctPass = "Happy 19th Birthday"; // 🔑 change this to your passcode
 
   function checkPass() {
     const input = document.getElementById("passInput").value;
